# norn

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE-CHECKLIST.md  rustfmt.toml
.github/workflows/: release.yml  rust.yml
benches/: categorization.rs
crates/splog-core/: Cargo.toml  LICENSE.md  README.md
crates/splog-core/benches/: categorization.rs
crates/splog-core/src/: categorize.rs  lib.rs  log_view_state.rs
src/: app.rs  capture.rs  categorize.rs  lib.rs  log_view_state.rs  main.rs  ui.rs
