[package]
name = "splog"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "A TUI log viewer with automatic category filtering"
homepage = "https://github.com/ggodet-bar/splog"
repository = "https://github.com/ggodet-bar/splog"
include = ["/src", "LICENSE.md", "README.md", "CHANGELOG.md"]
categories = ["command-line-utilities", "development-tools::debugging", "visualization"]
keywords = ["cli", "terminal", "tui", "logs", "log-viewer"]
rust-version = "1.88.0"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["use-dev-tty", "libc"] }
ansi-to-tui = "8.0"
anyhow = "1.0"
regex = "1.12"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "categorization"
harness = false

[profile.release]
lto = true
strip = true
codegen-units = 1
