[workspace]
members = [".", "crates/splog-core"]

[workspace.package]
authors = ["Guillaume Godet-Bar <guillaume.godetbar@gmail.com>"]
homepage = "https://github.com/ggodet-bar/splog"
readme = "README.md"
edition = "2024"
license = "MIT"
version = "0.1.0"
categories = ["command-line-utilities", "development-tools::debugging", "visualization"]
keywords = ["cli", "terminal", "tui", "logs", "log-viewer"]
rust-version = "1.88.0"

[workspace.dependencies]
regex = "1.12"

[package]
name = "splog"
description = "A TUI log viewer with automatic category filtering"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository = "https://github.com/ggodet-bar/splog"
include = ["/src", "LICENSE.md", "README.md", "CHANGELOG.md"]


[dependencies]
splog-core = { path = "crates/splog-core", version = "0.1.0" }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["use-dev-tty", "libc"] }
ansi-to-tui = "8.0"
anyhow = "1.0"
regex = { workspace = true }

[profile.release]
lto = true
strip = true
codegen-units = 1
