[package]
name = "splog-core"
description = "Internal categorization engine and log-view state for the splog TUI. Not intended for external use."
authors.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
readme = "README.md"
repository = "https://github.com/ggodet-bar/splog/tree/main/crates/splog-core"
include = ["/src", "README.md", "LICENSE.md"]

[dependencies]
regex = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "categorization"
harness = false
